data/derived/sp14/progs/unify/prog4589.ml.out
Characters 72-77:
  if x<>b && y=true then (x,y)
                         ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
